--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-			<img src="./img/logo.jpg" alt="" width="70px">
+			<img src="./logo.jpg" alt="" width="70px">
 			<span class="text"><h3 class="right-shift">GFD</h3></span>
 		</a>
 		<ul class="side-menu top">
