--- a/Feeds.html
+++ b/Feeds.html
@@ -17,7 +17,7 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-			<img src="./img/logo.jpg" alt="" width="70px">
+			<img src="./logo.jpg" alt="" width="70px">
 			<span class="text"><h3 class="right-shift">GFD</h3></span>
 		</a>
 		<ul class="side-menu top">
@@ -90,7 +90,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/boss.png" id="dropdown-btn">
+				<img src="./boss.png" id="dropdown-btn">
                 <!-- <div class="dropdown-content">
                     <a href="#">Option 1</a>
                     <a href="#">Option 2</a>
