--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/boss.png">
+				<img src="./boss.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -159,7 +159,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Tushar saini</p>
 								</td>
 								<td>01-10-2021</td>
@@ -167,7 +167,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Prabhat Chauhan</p>
 								</td>
 								<td>01-10-2021</td>
@@ -175,7 +175,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sandeep</p>
 								</td>
 								<td>01-10-2021</td>
@@ -183,7 +183,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Aryan Goswami</p>
 								</td>
 								<td>01-10-2021</td>
@@ -191,7 +191,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sharma Tushar</p>
 								</td>
 								<td>01-10-2021</td>
