updated photo location

--- a/Registration.html
+++ b/Registration.html
@@ -90,7 +90,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/boss.png">
+				<img src="./boss.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -168,7 +168,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Tushar saini</p>
 								</td>
 								<td>01-10-2021</td>
@@ -176,7 +176,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Prabhat Chauhan</p>
 								</td>
 								<td>01-10-2021</td>
@@ -192,7 +192,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Aryan Goswami</p>
 								</td>
 								<td>01-10-2021</td>
@@ -200,7 +200,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sharma Tushar</p>
 								</td>
 								<td>01-10-2021</td>
