--- a/Feeds.html
+++ b/Feeds.html
@@ -173,7 +173,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Tushar saini</p>
 								</td>
 								<td>01-10-2021</td>
@@ -181,7 +181,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Prabhat Chauhan</p>
 								</td>
 								<td>01-10-2021</td>
@@ -189,7 +189,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sandeep</p>
 								</td>
 								<td>01-10-2021</td>
@@ -197,7 +197,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Aryan Goswami</p>
 								</td>
 								<td>01-10-2021</td>
@@ -205,7 +205,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sharma Tushar</p>
 								</td>
 								<td>01-10-2021</td>
