--- a/Analytics.html
+++ b/Analytics.html
@@ -169,7 +169,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Tushar saini</p>
 								</td>
 								<td>01-10-2021</td>
@@ -177,7 +177,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Prabhat Chauhan</p>
 								</td>
 								<td>01-10-2021</td>
@@ -185,7 +185,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sandeep</p>
 								</td>
 								<td>01-10-2021</td>
@@ -193,7 +193,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Aryan Goswami</p>
 								</td>
 								<td>01-10-2021</td>
@@ -201,7 +201,7 @@
 							</tr>
 							<tr>
 								<td>
-									<img src="img/boss.png">
+									<img src="./boss.png">
 									<p>Sharma Tushar</p>
 								</td>
 								<td>01-10-2021</td>
