update photo location

--- a/Settings.html
+++ b/Settings.html
@@ -90,7 +90,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/boss.png" id="dropdown-btn">
+				<img src="./boss.png" id="dropdown-btn">
                 <!-- <div class="dropdown-content">
                     <a href="#">Option 1</a>
                     <a href="#">Option 2</a>
