--- a/Feeds.html
+++ b/Feeds.html
@@ -89,14 +89,40 @@
 				<i class='bx bxs-bell' ></i>
 				<span class="num">8</span>
 			</a>
-			<a href="#" class="profile">
-				<img src="./boss.png" id="dropdown-btn">
-                <!-- <div class="dropdown-content">
-                    <a href="#">Option 1</a>
-                    <a href="#">Option 2</a>
-                    <a href="#">Option 3</a>
-                  </div> -->
-			</a>
+			<img src="./boss.png" class="user-pic" onclick="toggleMenu()">
+			<div class="sub-menu-wrap" id="subMenu">
+				<div class="sub-menu">
+				<div class="user-info">
+					<img src="./boss.png">
+					<h2>Prabhat Chauhan</h2>
+				</div>
+				<hr>
+
+                    <a href="#" class="sub-menu-link">
+                        <img src="images/Edit profile.png" alt="">
+                        <p>Edit Profile</p>
+                        <span>></span>
+                    </a><br>
+
+                    <a href="#" class="sub-menu-link">
+                        <img src="images/Setting and Privacy.png" alt="">
+                        <p>Security and Privacy</p>
+                        <span>></span>
+                    </a><br>
+
+                    <a href="#" class="sub-menu-link">
+                        <img src="images/Help and Support.png" alt="">
+                        <p>Help and Support</p>
+                        <span>></span>
+                    </a><br>
+
+                    <a href="#" class="sub-menu-link">
+                        <img src="images/Logout.png" alt="">
+                        <p>Logout</p>
+                        <span>></span>
+                    </a>
+				</div>
+			</div>	
 		</nav>
 		<!-- NAVBAR -->
 
@@ -248,7 +274,13 @@
 		<!-- MAIN -->
 	</section>
 	<!-- CONTENT -->
+	<script>
+		let subMenu = document.getElementById("subMenu");
 	
+		function toggleMenu(){
+			subMenu.classList.toggle("open-menu");
+		}
+	</script>
 
 	<script src="script.js"></script>
 </body>
